Adiciona stream dos frames capturados entre os dois lados da aplicação.

--- a/operador/interface_operador.ui
+++ b/operador/interface_operador.ui
@@ -484,7 +484,11 @@
         </widget>
        </item>
        <item row="0" column="0">
-        <widget class="QGraphicsView" name="graphicsView"/>
+        <widget class="QLabel" name="label">
+         <property name="text">
+          <string/>
+         </property>
+        </widget>
        </item>
       </layout>
      </widget>
